Big dose of additions
1-created struct for Threads parameters,initialized them ,and inserted them to the thread function.
2- created a function that divides rows to the different threads
3-built an array of arrays that has the Starting and ending index for each thread.
 *built an array of arrays that has the Starting and
  ending row for each thread.
 *built an array such that array[i]=size of i'th row
4- Created io_thread.h and io_thread.c
5- updated open_output_file function
6- updated find_input_file_size function

--- a/Caesar.vcxproj.filters
+++ b/Caesar.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="file_handler.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="io_thread.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="functions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="file_handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="io_thread.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
