--- a/Caesar.vcxproj
+++ b/Caesar.vcxproj
@@ -140,11 +140,13 @@
   <ItemGroup>
     <ClCompile Include="file_handler.c" />
     <ClCompile Include="functions.c" />
+    <ClCompile Include="io_thread.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="file_handler.h" />
     <ClInclude Include="functions.h" />
+    <ClInclude Include="io_thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
